# routes/api.php
@@ -2,10 +2,22 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\BookController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+Route::prefix('user')->group(function () {
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::get('/login', [AuthController::class, 'login'])->name('login');
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:api');
+    Route::get('/whoami', function (Request $request) {
+        return $request->user();
+    })->middleware('auth:api');
+});
 
-Route::apiResource('book', BookController::class);
+Route::resource('book', BookController::class)
+    ->only(['index', 'show']);
+
+Route::resource('book', BookController::class)
+    ->except(['index', 'show'])
+    ->middleware('auth:api');
